--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="divCont1">
   		<h2>My To Do List</h2>
   	<div id="divItem1">
-  		<input type="text" placeholder="input tex" id="input" >
+  		<input type="text" placeholder="input text" id="input" >
   		<button id="button" onclick="a()">Add</button>
   	</div>
   </div>
